Fix for [#33090] "Segfault/Crash with Empty and Motion Actuator, Keyboard Sensor" reported by Martin Felke (scorpion81).

Apparently, not all objects have physics controllers, so now we do a NULL check in KX_ObjectActuator.